fix - Fixing a collapsing gapping on a mobile devices with a section services

--- a/src/components/servicesListItem/style.css
+++ b/src/components/servicesListItem/style.css
@@ -112,7 +112,7 @@
 @media screen and (max-width: 1024px) {
   .services__item {
     flex: initial;
-    gap: 4rem;
+    gap: 2rem;
     height: auto;
     padding: 0;
     box-shadow: none;
